add copyOf in oauth parts
Signed-off-by: see-quick <maros.orsak159@gmail.com>